@@ -271,7 +271,7 @@ void KPLineObject::paint( QPainter* _painter, KoZoomHandler*_zoomHandler,
         _painter->drawLine( _zoomHandler->zoomItX( - diff1.width() ),
                             _zoomHandler->zoomItY( oh / 2 ),
                             _zoomHandler->zoomItX( ow - diff2.width() ),
-                            _zoomHandler->zoomItY( oh / 2) );
+                            _zoomHandler->zoomItY( oh / 2 ) );
     } break;
     case LT_VERT: {
         if ( lineBegin != L_NORMAL && !drawContour )
@@ -363,41 +363,63 @@ void KPLineObject::flip( bool horizontal )
 }
 
 KoSize KPLineObject::getRealSize() const {
+    KoPoint realOrig( orig );
     KoSize size( ext );
 
-    if ( angle != 0.0 ) {
-        float angInRad = angle * M_PI / 180;
-        switch (lineType ) {
-        case LT_HORZ:
-            size.setWidth( ext.width() * cos( angInRad ) + pen.width() * sin( angInRad ) );
-            size.setHeight( ext.width() * sin( angInRad ) + pen.width() * cos( angInRad ) );
-            break;
-        case LT_VERT:
-            size.setWidth( pen.width() * cos( angInRad ) + ext.height() * sin( angInRad ) );
-            size.setHeight( pen.width() * sin( angInRad ) + ext.height() * cos( angInRad ) );
-            break;
-        case LT_LU_RD:
-        case LT_LD_RU:
-            {
-                KoPointArray points(2);
-                if ( lineType == LT_LU_RD ) {
-                    points.setPoint( 0, 0, 0 );
-                    points.setPoint( 1, ext.width(), ext.height() );
-                }
-                else {
-                    points.setPoint( 0, 0, ext.height() );
-                    points.setPoint( 1, ext.width(), 0 );
-                }
-                KoPoint realOrig(orig);
-                getRealSizeAndOrigFromPoints( points, angle, size, realOrig );
-            } break;
+    KoPointArray points(4);
+
+    if ( lineType == LT_LU_RD || lineType == LT_LD_RU )
+    {
+        double objAngle = atan( ext.width() / ext.height() );
+        double x = cos( objAngle ) * pen.width();
+        double y = sin( objAngle ) * pen.width();
+        
+        if ( lineType == LT_LU_RD )
+        {
+            points.setPoint( 0, x, 0 );
+            points.setPoint( 1, 0, y );
+            points.setPoint( 2, ext.width() + x, ext.height() );
+            points.setPoint( 3, ext.width(), ext.height() + y );
         }
+        else
+        {
+            points.setPoint( 0, 0, ext.height() );
+            points.setPoint( 1, x, ext.height() + y );
+            points.setPoint( 2, ext.width(), 0 );
+            points.setPoint( 3, ext.width() + x, y );
+        }
+        realOrig.setX( realOrig.x() - x / 2.0 );
+        realOrig.setY( realOrig.y() - y / 2.0 );
+        size.setWidth( size.width() + x );
+        size.setHeight( size.height() + y );
     }
-    else if ( lineType == LT_HORZ ) {
+
+    if ( angle == 0.0 && lineType == LT_HORZ )
+    {
         size.setHeight( pen.width() );
     }
-    else if ( lineType == LT_VERT ) {
+    else if ( angle == 0.0 && lineType == LT_VERT )
+    {
         size.setWidth( pen.width() );
+    }
+    else
+    {
+        if ( lineType == LT_HORZ )
+        {
+            points.setPoint( 0, 0, ( ext.height() - pen.width() ) / 2.0 );
+            points.setPoint( 1, 0, ( ext.height() + pen.width() ) / 2.0 );
+            points.setPoint( 2, ext.width(), ( ext.height() - pen.width() ) / 2.0 );
+            points.setPoint( 3, ext.width(), ( ext.height() + pen.width() ) / 2.0 );
+        }
+        else if ( lineType == LT_VERT )
+        {
+            points.setPoint( 0, ( ext.width() - pen.width() ) / 2.0, 0 );
+            points.setPoint( 1, ( ext.width() + pen.width() ) / 2.0, 0 );
+            points.setPoint( 2, ( ext.width() - pen.width() ) / 2.0, ext.height() );
+            points.setPoint( 3, ( ext.width() + pen.width() ) / 2.0, ext.height() );
+        }
+
+        getRealSizeAndOrigFromPoints( points, angle, size, realOrig );
     }
 
     return size;
@@ -405,28 +427,61 @@ KoSize KPLineObject::getRealSize() const {
 
 KoPoint KPLineObject::getRealOrig() const {
     KoPoint realOrig( orig );
+    KoSize size( ext );
 
-    if ( angle != 0.0 ) {
-        KoPointArray points(2);
-        switch ( lineType ) {
-            case LT_HORZ:
-                points.setPoint( 0, 0, ext.height() / 2.0 );
-                points.setPoint( 1, ext.width(), ext.height() / 2.0 );
-                break;
-            case LT_VERT:
-                points.setPoint( 0, ext.width() / 2.0, 0 );
-                points.setPoint( 1, ext.width() / 2.0, ext.height() );
-                break;
-            case LT_LU_RD:
-                points.setPoint( 0, 0, 0 );
-                points.setPoint( 1, ext.width(), ext.height() );
-                break;
-            case LT_LD_RU:
-                points.setPoint( 0, 0, ext.height() );
-                points.setPoint( 1, ext.width(), 0 );
-                break;
+    KoPointArray points(4);
+
+    if ( lineType == LT_LU_RD || lineType == LT_LD_RU )
+    {
+        double objAngle = atan( ext.width() / ext.height() );
+        double x = cos( objAngle ) * pen.width();
+        double y = sin( objAngle ) * pen.width();
+        
+        if ( lineType == LT_LU_RD )
+        {
+            points.setPoint( 0, x, 0 );
+            points.setPoint( 1, 0, y );
+            points.setPoint( 2, ext.width() + x, ext.height() );
+            points.setPoint( 3, ext.width(), ext.height() + y );
         }
-        KoSize size( ext );
+        else
+        {
+            points.setPoint( 0, 0, ext.height() );
+            points.setPoint( 1, x, ext.height() + y );
+            points.setPoint( 2, ext.width(), 0 );
+            points.setPoint( 3, ext.width() + x, y );
+        }
+        realOrig.setX( realOrig.x() - x / 2.0 );
+        realOrig.setY( realOrig.y() - y / 2.0 );
+        size.setWidth( size.width() + x );
+        size.setHeight( size.height() + y );
+    }
+
+    if ( angle == 0.0 && lineType == LT_HORZ )
+    {
+        realOrig.setY( realOrig.y() + ( ext.height() - pen.width() ) / 2.0 );
+    }
+    else if ( angle == 0.0 && lineType == LT_VERT )
+    {
+        realOrig.setX( realOrig.x() + ( ext.width() - pen.width() ) / 2.0 );
+    }
+    else
+    {
+        if ( lineType == LT_HORZ )
+        {
+            points.setPoint( 0, 0, ( ext.height() - pen.width() ) / 2.0 );
+            points.setPoint( 1, 0, ( ext.height() + pen.width() ) / 2.0 );
+            points.setPoint( 2, ext.width(), ( ext.height() - pen.width() ) / 2.0 );
+            points.setPoint( 3, ext.width(), ( ext.height() + pen.width() ) / 2.0 );
+        }
+        else if ( lineType == LT_VERT )
+        {
+            points.setPoint( 0, ( ext.width() - pen.width() ) / 2.0, 0 );
+            points.setPoint( 1, ( ext.width() + pen.width() ) / 2.0, 0 );
+            points.setPoint( 2, ( ext.width() - pen.width() ) / 2.0, ext.height() );
+            points.setPoint( 3, ( ext.width() + pen.width() ) / 2.0, ext.height() );
+        }
+
         getRealSizeAndOrigFromPoints( points, angle, size, realOrig );
     }
 
